# online_school

./: .env  Dockerfile  docker-compose.yml  entrypoint.sh  pre-commit-config.yml  pyproject.toml
.edu_db/postgres/: postmaster.pid
.edu_db/postgres/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
.edu_db/postgres/pg_stat_tmp/: db_0.stat  db_13780.stat  db_16384.stat  global.stat
.edu_db/postgres/pg_subtrans/: 0000
.edu_db/postgres/pg_xact/: 0000
eduplatform/chat/: admin.py  asgi.py  consumers.py  endpoints.py  models.py  serializers.py  urls.py  views.py
eduplatform/chat/migrations/: 0001_create_room_model.py  0002_create_message_model.py  0003_ctrate_conversetion_request_model.py  0004_update_room_model.py
eduplatform/chat/templates/: index.html  room.html
eduplatform/eduplatform/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
eduplatform/mentorship/: admin.py  consts.py  endpoints.py  managers.py  mixins.py  models.py  serializers.py  tests.py  urls.py
eduplatform/mentorship/migrations/: 0001_create_user_model.py  0002_create_teacher_model.py  0003_create_student_model.py  0004_create_group_model.py  0005_create_course_model.py  0006_create_email_model.py
eduplatform/testing_system/: endpoints.py  models.py  serializers.py  urls.py
eduplatform/testing_system/migrations/: 0001_create_group_model.py  0002_create_course_model.py  0003_create_topic_model.py  0004_create_article_model.py  0005_create_test_model.py  0006_create_question_model.py  0007_create_answer_model.py  0008_create_attempt_model.py  0009_update_attempt.py
(+169 files in other folders)
